<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">
	<!-- this is where the fragments are loaded-->
	<FrameLayout
		android:id="@+id/content_frame"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<!-- Container for contents of drawer - use NavigationView to make configuration easier -->
	<android.support.design.widget.NavigationView
		android:id="@+id/drawer_nav_view"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/drawer_header"
		app:menu="@menu/drawer_view" />
</android.support.v4.widget.DrawerLayout>