<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainPageFragment">

	<!-- TODO: Update blank fragment layout -->


	<AutoCompleteTextView
		android:id="@+id/autoCompleteTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:layout_gravity="center_horizontal"
		android:textSize="24sp"
		android:textStyle="bold"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:hint="@string/autocomplete_hint" >

		<requestFocus />
	</AutoCompleteTextView>


</FrameLayout>